# fdoom.rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PORTING.md  README.md  build.rs  justfile
assets/: prospectors_note.txt  story_guide.txt
assets/localization/: italiano.mcpl
assets/sprites/: manifest.txt
docs/: ADDING_CONTENT.md  ARCHITECTURE.md  ART_GUIDE.md  AUDIT_RESULTS.md  CORE_AND_SAVES.md  DEV_GUIDE.md  ENTITIES.md  HANDOFF_TODO.md  ITEMS_AND_CRAFTING.md  ODDITIES.md  PLAYTEST.md  RENDERING_AND_UI.md  REQUESTS_AUDIT.md  ROADMAP.md  TERRAIN.md  UI_REDESIGN.md
src/: assets.rs  java_random.rs  lib.rs  main.rs  rng.rs  testutil.rs
src/core/: events.rs  field_notes.rs  file_handler.rs  game.rs  mod.rs  my_utils.rs  renderer.rs  temperature.rs  updater.rs  weather.rs  world.rs
src/entity/: behavior.rs  direction.rs  fireflies.rs  item_entity.rs  item_entity_behavior.rs  (+5 more)
tests/: art_followups.rs  artgen_sheet.rs  attack_bounds.rs  bench.rs  biome_frames.rs  biome_identity.rs  cavein_reachability.rs  combat_feel.rs  content_wave.rs  crafting_chain.rs  crafting_progression.rs  dev_console.rs  display_flow.rs  dynamic_resolution.rs  excavation.rs  farming_cooking.rs  fire.rs  first_day.rs  fishing.rs  flora_gen.rs  flora_ground.rs  fog.rs  forest_canopy.rs  gameplay_soak.rs  headless_render.rs  hole_render.rs  hud_qol.rs  hunting_notes.rs  infinite_world.rs  keymap_check.rs  level_gen_determinism.rs  level_gen_parity.rs  light_shelter.rs  lighting.rs  map_screen.rs  mining.rs  mob_life.rs  multi_level_terrain.rs  natural_spawns.rs  notifications_hud.rs  (+23 more)
(+178 files in other folders)
